# fleet

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/helper/: install.sh  install_dependencies.sh  site_config_postgres.json
.github/workflows/: backport.yml  generate-changelog.yml  lint.yaml  overrides.yaml  pytest-postgres.yaml  pytest.yaml  release.yaml
fleet/: __init__.py  fleet_home.css  fleet_home.html  fleet_home.js  hooks.py  install.py
fleet/docs/: delivery-trip-optimization.md  driver-assignment.md  geofencing.md  gps-tracking.md  index.md  telemetry.md  vehicle-management.md
fleet/fleet/: calendar.py  install.py  traccar.py
fleet/fleet/custom/: driver.json  driving_license_category.json  location.json  timesheet.json  timesheet_detail.json  vehicle.json  vehicle_log.json
fleet/fleet/doctype/state/: state.json
fleet/fleet/doctype/traccar_integration/: traccar_integration.js  traccar_integration.json
fleet/fleet/doctype/vehicle_driver/: vehicle_driver.json
fleet/fleet/overrides/: delivery_trip.py  location.py  timesheet.py  vehicle.py
fleet/fleet/workspace/: __init__.py
fleet/fleet/workspace/fleet/: fleet.json
fleet/public/js/: fleet_calendar.js  timesheet.js
fleet/tests/: setup.py  simulate_gps_data.py  vehicles.json
fleet/tests/fixtures/: locations_and_routes.py  vehicle_logs.json  vehicles.json
